IM-client 0.10

    * Initial version

IM-client 0.20

    * Changes in the RADL code

IM-client 0.21

    * Changes in the examples to be correct with the new RADL syntax

IM-client 1.0.0

    * Minor bug fixes

IM-client 1.1.0

    * Minor bug fixes
    * Changes to be compatible with IM version 1.1.0

IM-client 1.2.0

    * Add support to parametric RADLs (@input.[param]@ values)
    * Add the getradl operation
    * Add the getvmcontmsg operation

IM-client 1.2.1

    * Check the RADL before sending to the IM server in the create operation
    * Update the radl.py to the last updates in the IM server

IM-client 1.2.2

    * Improve the RADL parser code
    * Bugfix in im-client installation

IM-client 1.3.0

    * Add the startvm and stopvm operations

IM-client 1.3.1

    * BugFix in reconfigure operation reading RADL file
    * BugFix in getvmcontmsg operation in case of error
    * Add sshvm operation
    * Translate help messages