@@ -45,3 +45,4 @@ IM-client 1.3.1
     * BugFix in getvmcontmsg operation in case of error
     * Add sshvm operation
     * Translate help messages
+    * Add new added parameters to addresource, removeresource and reconfigure operations
